--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider; ./build-wasm.sh && vuepress dev docs",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider; ./build-wasm.sh && vuepress build docs",
+    "dev": "./build-wasm.sh && vuepress dev docs",
+    "build": "./build-wasm.sh && vuepress build docs",
     "deploy": "sh deploy.sh",
-    "just-build": "NODE_OPTIONS=--openssl-legacy-provider; vuepress build docs",
-    "just-dev": "NODE_OPTIONS=--openssl-legacy-provider; vuepress dev docs"
+    "just-build": "vuepress build docs",
+    "just-dev": "vuepress dev docs"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.9.5",
-    "vuepress": "^1.9.5",
-    "vuepress-plugin-code-copy": "^1.0.6",
-    "vuepress-plugin-seo": "^0.2.0",
-    "vuepress-theme-thindark": "^1.0.1"
-  }
+    "@vuepress/bundler-vite": "2.0.0-rc.14",
+    "@vuepress/plugin-register-components": "2.0.0-rc.37",
+    "@vuepress/plugin-search": "2.0.0-rc.37",
+    "@vuepress/plugin-seo": "2.0.0-rc.37",
+    "@vuepress/theme-default": "2.0.0-rc.37",
+    "vite-plugin-top-level-await": "^1.4.1",
+    "vite-plugin-wasm": "^3.3.0",
+    "vue": "^3.4.31",
+    "vuepress": "2.0.0-rc.14"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
