--- a/code/beginner/tutorial1-window/Cargo.toml
+++ b/code/beginner/tutorial1-window/Cargo.toml
@@ -13,17 +13,12 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0"
-cfg-if = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 winit = "0.30"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
-tracing-web = "0.1"
+tracing-wasm = "0.2"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-] }
+web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
