--- a/code/beginner/tutorial5-textures/Cargo.toml
+++ b/code/beginner/tutorial5-textures/Cargo.toml
@@ -2,42 +2,10 @@
 name = "tutorial5-textures"
 version = "0.1.0"
 authors = ["Ben Hansen <https://github.com/sotrh>"]
-edition = "2018"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-
-[dependencies]
-cfg-if = "1"
-anyhow = "1.0"
-bytemuck = { version = "1.16", features = [ "derive" ] }
-env_logger = "0.10"
-log = "0.4"
-pollster = "0.3"
-wgpu = "22.0"
-winit = { version = "0.29", features = ["rwh_05"] }
-
-[dependencies.image]
-version = "0.24"
-default-features = false
-features = ["png", "jpeg"]
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1"
-console_log = "1.0"
-wgpu = { version = "22.0", features = ["webgl"]}
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-]}
-
-[build-dependencies]
-anyhow = "1.0"
-fs_extra = "1.2"
-glob = "0.3"
 
 [[bin]]
 name = "tutorial5-textures"
@@ -47,3 +15,24 @@ path = "src/main.rs"
 [[bin]]
 name = "tutorial5-challenge"
 path = "src/challenge.rs"
+
+[dependencies]
+anyhow = "1.0"
+# NEW!
+image = { version = "0.25", default-features = false, features = ["png"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+wgpu = "22"
+winit = "0.30"
+zerocopy = { version = "0.7", features = ["derive"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pollster = "0.3"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1"
+tracing-wasm = "0.2"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
+wgpu = { version = "22", features = ["webgl"] }
