--- a/code/beginner/tutorial5-textures/Cargo.toml
+++ b/code/beginner/tutorial5-textures/Cargo.toml
@@ -18,13 +18,13 @@ path = "src/challenge.rs"
 
 [dependencies]
 anyhow = "1.0"
+bytemuck = { version = "1.18", features = ["derive"] }
 # NEW!
 image = { version = "0.25", default-features = false, features = ["png"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 wgpu = "22"
 winit = "0.30"
-zerocopy = { version = "0.7", features = ["derive"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 pollster = "0.3"
