--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,24 @@ exclude = [
     "code/showcase/imgui-demo",
     "code/showcase/pong",
 ]
+
+[workspace.dependencies]
+anyhow = "1.0"
+bytemuck = { version = "1.18", features = ["derive"] }
+cargo-run-wasm = "0.4"
+console_error_panic_hook = "0.1"
+glam = { version = "0.29", features = ["bytemuck"] }
+image = { version = "0.25", default-features = false, features = ["png"] }
+pollster = "0.3"
+rayon = "1.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-wasm = "0.2"
+wasm-bindgen = "0.2"
+wasm-bindgen-cli-support = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
+wgpu = "22"
+winit = "0.30"
