--- a/code/beginner/tutorial9-models/Cargo.toml
+++ b/code/beginner/tutorial9-models/Cargo.toml
@@ -2,47 +2,39 @@
 name = "tutorial9-models"
 version = "0.1.0"
 authors = ["Ben Hansen <https://github.com/sotrh>"]
-edition = "2018"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[dependencies]
-anyhow = "1.0"
-bytemuck = { version = "1.16", features = [ "derive" ] }
-cfg-if = "1"
-cgmath = "0.18"
-env_logger = "0.10"
-pollster = "0.3"
-log = "0.4"
-tobj = { version = "3.2", default-features = false, features = ["async"]}
-wgpu = "22.0"
-winit = { version = "0.29", features = ["rwh_05"] }
-
-[dependencies.image]
-version = "0.24"
-default-features = false
-features = ["png", "jpeg"]
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-reqwest = { version = "0.11" }
-console_error_panic_hook = "0.1"
-console_log = "1.0"
-wgpu = { version = "22.0", features = ["webgl"]}
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-    "Location",
-]}
-
-[build-dependencies]
-anyhow = "1.0"
-fs_extra = "1.2"
-glob = "0.3"
-
 [[bin]]
 name = "tutorial9-models"
 path = "src/main.rs"
+
+[dependencies]
+anyhow.workspace = true
+bytemuck.workspace = true
+glam.workspace = true
+image.workspace = true
+tobj.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+winit.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+pollster.workspace = true
+wgpu.workspace = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook.workspace = true
+reqwest.workspace = true
+tracing-wasm.workspace = true
+wasm-bindgen.workspace = true
+wasm-bindgen-futures.workspace = true
+web-sys.workspace = true
+wgpu = { workspace = true, features = ["webgl"] }
+
+[build-dependencies]
+anyhow.workspace = true
+fs_extra.workspace = true
+glob.workspace = true
