--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,5 +37,6 @@ wasm-bindgen = "0.2"
 wasm-bindgen-cli-support = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Document", "Element", "Window", "Location"] }
+web-time = "1.1"
 wgpu = "23"
 winit = "0.30"
