--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ console_error_panic_hook = "0.1"
 fs_extra = "1.3"
 glam = { version = "0.29", features = ["bytemuck"] }
 glob = "0.3"
-image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
+image = { version = "0.25", default-features = false, features = ["jpeg", "png", "hdr"] }
 pollster = "0.4"
 rayon = "1.10"
 reqwest = "0.12"
