--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ exclude = [
 
 [workspace.dependencies]
 anyhow = "1.0"
-bytemuck = { version = "1.19", features = ["derive"] }
+bytemuck = { version = "1.20", features = ["derive"] }
 cargo-run-wasm = "0.4"
 console_error_panic_hook = "0.1"
 fs_extra = "1.3"
 glam = { version = "0.29", features = ["bytemuck"] }
 glob = "0.3"
 image = { version = "0.25", default-features = false, features = ["jpeg", "png", "hdr"] }
+oneshot = { version = "0.1", features = ["async"] }
 pollster = "0.4"
 rayon = "1.10"
 reqwest = "0.12"
