--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,11 @@ exclude = [
 
 [workspace.dependencies]
 anyhow = "1.0"
-bytemuck = { version = "1.20", features = ["derive"] }
+bytemuck = { version = "1.21", features = ["derive"] }
 cargo-run-wasm = "0.4"
 console_error_panic_hook = "0.1"
 fs_extra = "1.3"
 glam = { version = "0.29", features = ["bytemuck"] }
-glob = "0.3"
 image = { version = "0.25", default-features = false, features = ["jpeg", "png", "hdr"] }
 oneshot = { version = "0.1", features = ["async"] }
 pollster = "0.4"
@@ -30,6 +29,7 @@ rayon = "1.10"
 reqwest = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "2.0"
 tobj = { version = "4.0", default-features = false, features = ["async"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -39,5 +39,5 @@ wasm-bindgen-cli-support = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Document", "Element", "Window", "Location"] }
 web-time = "1.1"
-wgpu = "23"
+wgpu = "24"
 winit = "0.30"
