--- a/code/beginner/tutorial7-instancing/Cargo.toml
+++ b/code/beginner/tutorial7-instancing/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tutorial7-instancing"
 version = "0.1.0"
 authors = ["Ben Hansen <https://github.com/sotrh>"]
-edition = "2021"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -36,3 +36,6 @@ wasm-bindgen.workspace = true
 wasm-bindgen-futures.workspace = true
 web-sys.workspace = true
 wgpu = { workspace = true, features = ["webgl"] }
+
+[lints]
+workspace = true
