--- a/code/showcase/windowless/Cargo.toml
+++ b/code/showcase/windowless/Cargo.toml
@@ -2,7 +2,7 @@
 name = "windowless"
 version = "0.1.0"
 authors = ["Ben Hansen <https://github.com/sotrh>"]
-edition = "2021"
+edition = "2024"
 
 [[bin]]
 name = "windowless"
@@ -15,3 +15,6 @@ image.workspace = true
 oneshot.workspace = true
 pollster.workspace = true
 wgpu.workspace = true
+
+[lints]
+workspace = true
