--- a/code/wasm-builder/Cargo.toml
+++ b/code/wasm-builder/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasm-builder"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,3 +13,6 @@ serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 wasm-bindgen-cli-support.workspace = true
+
+[lints]
+workspace = true
