--- a/demo_server/Cargo.toml
+++ b/demo_server/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.89"
-env_logger = "0.11.5"
-log = "0.4.22"
-simple-server = "0.4.0"
+anyhow.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+
+[lints]
+workspace = true
